Implement fastly-dev-server

--- a/fastly/dev-server/Cargo.toml
+++ b/fastly/dev-server/Cargo.toml
@@ -9,16 +9,25 @@ axum = { workspace = true, features = ["macros"] }
 base64.workspace = true
 bon.workspace = true
 bytes.workspace = true
+chrono = { workspace = true, features = ["serde"] }
 clap = { workspace = true, features = ["env"] }
+headers.workspace = true
+http.workspace = true
 hyper014.workspace = true
 miette = { workspace = true, features = ["fancy"] }
 opentelemetry.workspace = true
 opentelemetry_sdk.workspace = true
-opentelemetry-otlp.workspace = true
+opentelemetry-otlp = { workspace = true, features = ["http-proto", "reqwest-rustls", "gzip-http"] }
 opentelemetry-semantic-conventions.workspace = true
-redb.workspace = true
+redb = { workspace = true, features = ["logging"] }
+serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
 tokio = { workspace = true, features = ["full"] }
+tower = { workspace = true, features = ["full"] }
+tower-http = { workspace = true, features = ["full"] }
 tracing.workspace = true
+tracing-log.workspace = true
 tracing-opentelemetry.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
+ulid.workspace = true
 viceroy-lib.workspace = true
