--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,15 @@ license = "LicenseRef-OQL-1.3"
 
 [workspace.dependencies]
 axum = "0.8.8"
+axum-extra = "0.12.5"
 base64 = "0.22.1"
 bon = "3.8.2"
 bytes = "1.11.0"
+chrono = "0.4.43"
 clap = "4.5.56"
 fastly = "0.11.13"
+headers = "0.4.1"
+http = "1.4.0"
 hyper014 = { version = "0.14", package = "hyper" }
 miette = "7.6.0"
 opentelemetry = "0.31.0"
@@ -34,9 +38,13 @@ serde = "1.0.228"
 serde_json = "1.0.149"
 thiserror = "2.0.18"
 tokio = "1.49.0"
+tower = "0.5.3"
+tower-http = "0.6.8"
 tracing = "0.1.44"
+tracing-log = "0.2.0"
 tracing-opentelemetry = "0.32.1"
 tracing-subscriber = "0.3.22"
+ulid = "1.2.1"
 viceroy-lib = "0.16.4"
 
 fastly-opentelemetry = { path = "fastly/opentelemetry" }
