fastly-dev-server: Implement the other stores

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ opentelemetry-semantic-conventions = "0.31.0"
 redb = "3.1.0"
 serde = "1.0.228"
 serde_json = "1.0.149"
+serde_with = "3.16.1"
 thiserror = "2.0.18"
 tokio = "1.49.0"
 tower = "0.5.3"
