--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ tracing-log = "0.2.0"
 tracing-opentelemetry = "0.32.1"
 tracing-subscriber = "0.3.22"
 ulid = "1.2.1"
-# viceroy-lib = { git = "https://github.com/KokaKiwi/Viceroy.git", branch = "dev-server" }
-viceroy-lib = { path = "../Viceroy" }
+viceroy-lib = { git = "https://github.com/KokaKiwi/Viceroy.git", branch = "dev-server" }
+# viceroy-lib = { path = "../Viceroy" }
 
 fastly-opentelemetry = { path = "fastly/opentelemetry" }
