fastly-dev-server: correctly handle shutdown signal

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ serde_json = "1.0.149"
 serde_with = "3.16.1"
 thiserror = "2.0.18"
 tokio = "1.49.0"
+tokio-graceful-shutdown = "0.19.2"
 tower = "0.5.3"
 tower-http = "0.6.8"
 tracing = "0.1.44"
