--- a/fastly/dev-server/Cargo.toml
+++ b/fastly/dev-server/Cargo.toml
@@ -27,6 +27,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 serde_with = { workspace = true, features = ["base64"] }
 tokio = { workspace = true, features = ["full"] }
+tokio-graceful-shutdown = { workspace = true, features = ["tracing"] }
 tower = { workspace = true, features = ["full"] }
 tower-http = { workspace = true, features = ["full"] }
 tracing.workspace = true
