fastly-dev-server: Implement part of Secret Stores API

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ redb = "3.1.0"
 serde = "1.0.228"
 serde_json = "1.0.149"
 serde_with = "3.16.1"
+sha2 = "0.10.9"
 thiserror = "2.0.18"
 tokio = "1.49.0"
 tokio-graceful-shutdown = "0.19.2"
