--- a/fastly/dev-server/Cargo.toml
+++ b/fastly/dev-server/Cargo.toml
@@ -26,6 +26,7 @@ redb = { workspace = true, features = ["logging"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 serde_with = { workspace = true, features = ["base64"] }
+sha2.workspace = true
 tokio = { workspace = true, features = ["full"] }
 tokio-graceful-shutdown = { workspace = true, features = ["tracing"] }
 tower = { workspace = true, features = ["full"] }
